# voice-cloner

./: .env.example  .gitignore  APPLIO_SETUP.md  BRANDING_GUIDE.md  COMMERCIAL_DISTRIBUTION.md  COMPLETE_INSTALLER.bat  COMPLETION_SUMMARY.md  DELIVERY_REPORT.md  DESKTOP_APPLICATION_COMPLETE.md  DESKTOP_APP_ARCHITECTURE.md  DESKTOP_APP_GUIDE.md  DESKTOP_APP_INDEX.md  DESKTOP_APP_README.md  DESKTOP_APP_SETUP_COMPLETE.md  DESKTOP_APP_VISUAL_SUMMARY.md  DESKTOP_CUSTOMIZATION_EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSTALL.bat  INSTALLATION_GUIDE.md  INTEGRATION_STEP1_COMPLETE.md  INTEGRATION_STEP2_COMPLETE.md  LICENSE  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START_SUMMARY.txt  README.md  README_DESKTOP_APP.md  README_INTEGRATION.md  REAL_VOICE_CLONING_GUIDE.md  RELEASE_NOTES.md  SETUP_COMPLETE.md  START_HERE_DESKTOP_APP.md  STRUCTURE.md  TRAINING_GUIDE.md  TROUBLESHOOTING.md  VOICE_PATTERNS_GUIDE.md  VoiceCloner.bat  VoiceCloner.spec  analyze_voice_data.py  (+33 more)
.github/workflows/: tests.yml
assets/: README.md
configs/: config.json
data/: train.txt  val.txt
docs/: FL_STUDIO_GUIDE.md  SETUP_GUIDE.md  USER_GUIDE.md
input/: .gitkeep
samples/: .gitkeep
src/: __init__.py  branding.py  desktop_app.py  main.py  orchestrator.py  test_app.py
src/config/: __init__.py  config.py
src/core/: __init__.py  rvc_converter.py  voice_converter.py
src/modules/: __init__.py  advanced_voice_converter.py  audio_preprocessor.py  custom_voice_transformer.py  environment_detector.py  environment_setup.py  formant_voice_cloner.py  model_trainer.py  (+17 more)
tests/: test_voice_cloner.py
(+5 files in other folders)
