[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-cloner"
version = "0.1.0"
description = "AI agent for SO-VITS-SVC voice cloning setup for FL Studio"
readme = "README.md"
requires-python = ">=3.8,<3.11"
license = {text = "MIT"}
authors = [
    {name = "Voice Cloner Team"}
]
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.5.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
]

[tool.setuptools]
packages = ["src"]

[project.scripts]
voice-cloner = "src.main:cli"
